# 2d_lidar_global_localization

./: 2d_lidar_global_localization_report.md
icp_localizer/: package.xml  setup.cfg  setup.py
icp_localizer/icp_localizer/: before)icp_localization_node.py  icp_initial_pose_estimator.py  open3d.py  rotate_robot_node.py  tf_and_icp.py
ndt_localizer/: CMakeLists.txt  package.xml
ndt_localizer/src/: ndt_localizer_node.cpp
ndt_matching_py/: package.xml  setup.cfg  setup.py
ndt_matching_py/ndt_matching_py/: initial_pose_from_cloud.py  ndt_node.py
