<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ndt_localizer</name>
  <version>0.1.0</version>
  <description>NDT-based initial pose estimator using point cloud registration</description>

  <maintainer email="cwhan@croft-ai.com">croft_robot</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime & Build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>gazebo_msgs</depend>

  
  <!-- Optional: For quaternion transform support -->
  <depend>tf2_geometry_msgs</depend>

  <!-- Optional: For YAML config or math operations -->
  <!-- <depend>eigen3_cmake_module</depend> -->
  <!-- <depend>libyaml-cpp</depend> -->

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

